# recurse-reader

./: README.md  pyproject.toml
src/recursereader/: __init__.py  recursereader.py
src/recursereader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
